# CLPathTracer

./: .clang-format  CMakeLists.txt
include/: CLHandler.h  CLInit.h  CLState.h  CLsetup.h  GLHandler.h  GLInit.h  GLState.h  GLsetup.h  GameInit.h  camera.h  error.h  game.h  kd_tree.h  list.h  matrix.h  model.h  object.h  physics.h  util.h  vector.h  vector3.h  voxel.h
kernels/: voxel.cl
src/: CLHandler.c  CLInit.c  CLState.c  CLsetup.c  GLHandler.c  GLInit.c  GLState.c  GLsetup.c  GameInit.c  camera.c  error.c  game.c  kd_tree.c  kernel.cl  list.c  main.c  matrix.c  model.c  obj_parser.y  obj_scanner.l  physics.c  shader.cl  util.c  vector.c  vector3.c  voxel.c
